# codex-fursona-pet-forge

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: pet-generation-handoff.md  pet-package-spec.md  pet-skin-action-defaults.md  pet-skin-quality-checklist.md  pet-skin-workflow.md
plugins/codex-fursona-pet-forge/: README.md
plugins/codex-fursona-pet-forge/.codex-plugin/: plugin.json
plugins/codex-fursona-pet-forge/hooks/: _common.py  hooks.json  session_start.py  stop.py
plugins/codex-fursona-pet-forge/personas/: default-ralf.en.yaml  default-ralf.yaml
plugins/codex-fursona-pet-forge/prompts/: onboarding-directive.md  persona-context.md
plugins/codex-fursona-pet-forge/scripts/: data_paths.py  digest_session.py  init_data.py  persona.py  session_context.py  simple_yaml.py
plugins/codex-fursona-pet-forge/skills/make-pet-skin/: SKILL.md  directional_running_adapter.py
plugins/codex-fursona-pet-forge/skills/pet-generation-handoff/: SKILL.md
plugins/codex-fursona-pet-forge/skills/remember-this/: SKILL.md  write_fact.py
plugins/codex-fursona-pet-forge/skills/setup-action/: SKILL.md  execute.py
plugins/codex-fursona-pet-forge/skills/stretch-reminder/: SKILL.md  reminder_config.py
tests/: conftest.py  test_common.py  test_digest_session.py  test_directional_running_adapter.py  test_init_data.py  test_persona.py  test_pet_skin_maker_assets.py  test_plugin_manifest.py  test_remember_this.py  test_session_context.py  test_session_start_hook.py  test_setup_action.py  test_stop_hook.py  test_stretch_reminder.py
(+2 files in other folders)
